fix for file:// dependency chart path resolutions (#510)
Signed-off-by: Eric Klatzer <eric@klatzer.at>

--- a/testdata/hauler-manifest-pipeline.yaml
+++ b/testdata/hauler-manifest-pipeline.yaml
@@ -34,6 +34,9 @@ spec:
       version: 1.0.4
     - name: rancher-cluster-templates-0.5.2.tgz
       repoURL: testdata
+    - name: chart-with-file-dependency-chart-1.0.0.tgz
+      repoURL: testdata
+      add-dependencies: true
 ---
 apiVersion: content.hauler.cattle.io/v1
 kind: Files
